--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         </p>
         <img
           class="divider"
-          src="/images/pattern-divider-desktop.svg"
+          src="images/pattern-divider-desktop.svg"
           alt="Pattern Divider"
         />
         <div class="dice-icon">
-          <img src="/images/icon-dice.svg" alt="Dice Icon Button" />
+          <img src="images/icon-dice.svg" alt="Dice Icon Button" />
         </div>
         <!-- <div class="spinner">
           <i class="icon ph ph-spinner"></i>
